--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-macros": "^3.1.0",
     "next": "latest",
+    "next.js": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
