--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.16",
     "babel-plugin-macros": "^3.1.0",
     "fullpage.js": "^4.0.15",
+    "hamburger-react": "^2.5.0",
     "next": "latest",
     "next-themes": "^0.2.1",
     "next.js": "^1.0.3",
